--- a/plugins/time/app/views/time/index.html.erb
+++ b/plugins/time/app/views/time/index.html.erb
@@ -28,9 +28,6 @@
 
   <%= javascript_tag do -%>
 
-     $(document).ready(function() {
-   });
-
     $(document).ready(function() {
       $('body').data('zones', <%= raw(@system_time.timezones.to_json) %>);
       var $timezone_options = $('select#systemtime_timezone');
@@ -168,7 +165,7 @@
             <legend>
               <input type="radio" name="systemtime[config]" value="manual" id="timeconfig_manual"
               <%= "disabled='disabled'" if disabled%>
-              <%= label_tag "timeconfig_manual", _("Manually configure time"), :class => "description" %>
+              <%= label_tag "timeconfig_manual", _("Manually configure time"), :class => "description" %> />
             </legend>
 
             <div class="time_subsection">
