--- a/webyast/app/views/restdoc/index.haml
+++ b/webyast/app/views/restdoc/index.haml
@@ -11,7 +11,7 @@
   %h4 List of WebYaST Modules:
 
   %ul
-    - @restdocs.each do |r|
+    - @restdocs.sort.each do |r|
       - if r.match /\/public\/restdoc\/(.*)\/restdoc\.html$/
         %li
           -# The trailing slash is important to load the referenced XML files correctly
