--- a/plugins/mailsetting/app/views/mailsetting/show.html.erb
+++ b/plugins/mailsetting/app/views/mailsetting/show.html.erb
@@ -58,6 +58,7 @@
       $("#send_mail").click(function(e) {
           var $form_data = $("#mailForm").find('input[type=text], input[type=password], select');
           var test_mail_data = {};
+          //FIXME use $("#mailForm").serialize() to get the form elements
           $form_data.each(function(index, element) {
             test_mail_data[element.name] = element.value;
           });
@@ -74,11 +75,13 @@
             data: test_mail_data
             })
           .success(function(data)  {
+            //FIXME use css class for styling
             $mail_notification.html(data.message).css({color:'green', display: 'inline-block'});
             $mail_waiting.hide();
             })
           .error(function(data) {
             var response = JSON.parse(data.responseText);
+            //FIXME use css class for styling
             $mail_notification.html(response.message).css({color:'red', display: 'inline-block'});
             $mail_waiting.hide();
             });
@@ -150,7 +153,7 @@ relay.example.com:26. Use square brackets around the host name to prevent from D
           <label id="mail_test_mail_label"><%=_("Send test mail to")%></label>
           <%= f.text_field :test_mail_address, :disabled => disabled, :class => "email" %>
           <%= submit_tag _("Send email"), :id => "send_mail", :type => :button %>
-          <%= image_tag("working.gif", :id=>:mail_waiting, :alt=>"Sending email", :height=>"20", :width=>"20",:style=>['padding-left: 10px; display: none']) %>
+          <%= image_tag("working.gif", :id=>:mail_waiting, :alt=>_("Sending email"), :size=>"20x20", :style=>'padding-left: 10px; display: none') %>
           <span id="mail_result" style="display: none; padding-left: 1em; width: 330px"></span>
           <label for="mail_test_mail_address" generated="true" class="error"> </label>
         </div>
