VLAN ID validation - accept only integers in range 0..4094

--- a/plugins/network/app/views/network/_validation.html.erb
+++ b/plugins/network/app/views/network/_validation.html.erb
@@ -64,6 +64,12 @@
         searchdomains: {
               searchdomains: true,
               required:true
+        },
+        vlan_id: {
+          required: true,
+          number: true,
+          min: 0,
+          max: 4094
         }
       },
 
