Control panel fixes - if user is root and module Administrator is installed, display it - otherwise go to Users module Fix check of installed module

--- a/webyast/app/views/layouts/application.html.erb
+++ b/webyast/app/views/layouts/application.html.erb
@@ -122,10 +122,12 @@
               <%= link_to _("Home"), '/controlpanel'%>
             </span>
             <span class="userbar-icon user-icon">
-              <% if WebyastEngine.find "Users" %>
-                <%= link_to(current_account.username, :controller => :users) %>
+              <% if current_account.username == 'root' %>
+                <%= link_to_if(WebyastEngine.find("Administrator").present?,
+                    current_account.username, {:controller=>:administrator, :action=>:index}) %>
               <% else %>
-                <%= current_account.username %>
+                <%= link_to_if(WebyastEngine.find("Users").present?,
+                    current_account.username, {:controller=>:users, :action=>:index}) %>
               <% end %>
             </span>
             <span class="userbar-icon" style=" text-align:center;">
